@@ -1,5 +1,8 @@
 2001-09-18  Arturo Espinosa Aldama  <arturo@ximian.com>
 
+	* network.pl.in (xst_network_rh62_parse_bootproto): If the
+	bootproto is unknown, report error, default to none.
+
 	* service.pl.in (xst_service_sysv_get_runlevels): added missing
 	supported distros and removed bogus ones. Report an error if
 	distro is not listed.
